# x1-expander

./: .gitignore  .gitmodules  1_MAIN.kicad_sch  2_LAN.kicad_sch  3_GPIO.kicad_sch  ProProject_X1 Expander_2024-05-26_15-16-51_2024-05-26.kicad_pcb  ProProject_X1 Expander_2024-05-26_15-16-51_2024-05-26.kicad_prl  ProProject_X1 Expander_2024-05-26_15-16-51_2024-05-26.kicad_pro  ProProject_X1 Expander_2024-05-26_15-16-51_2024-05-26.kicad_sch  README.md  X1 Expande-easyedapro.kicad_sym  fp-lib-table  sym-lib-table  x1-expander.kicad_pcb  x1-expander.kicad_prl  x1-expander.kicad_pro  x1-expander.kicad_sch  x1-expander.kicad_sym
ProProject_X1 Expander_2024-05-26_15-16-51_2024-05-26.pretty/: C0805.kicad_mod  CONN-TH_12P-P2.50_HCTL_XH-12A_C2908610.kicad_mod  CONN-TH_S4B-PH-KL-LF-SN.kicad_mod  HDR-TH_16P-P2.54-H-F-R2-C8-W9.0.kicad_mod  HDR-TH_4P-P2.54-H-M-W10.3.kicad_mod  LQFP-64_L10.0-W10.0-P0.50-LS12.0-TL.kicad_mod  OSC-SMD_4P-L3.2-W2.5-BL.kicad_mod  QFN64G-0.5-9X9MM.kicad_mod  RJ45-TH_HC913550A-M899-A.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL-2.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  TO-263-3_L8.6-W10.2-P2.54-LS14.4-TL.kicad_mod  USB-TH_10.0-4C6.3-ZB.kicad_mod
X1 Expande-easyedapro.3dshapes/: CONN-SMD_12P-P1.25_HCTL_HC-1.25-12PWT.step  CONN-SMD_12P-P1.25_HCTL_HC-1.25-12PWT.wrl  HDR-TH_16P-P2.54-H-F-R2-C8-W9.0.wrl  HDR-TH_4P-P2.54-M-WI-1X4P.step  HDR-TH_4P-P2.54-M-WI-1X4P.wrl  (+7 more)
fw/: .gitignore  CMakeLists.txt  bb_i2c.c  i2c.pio  main.c  pio_i2c.c  reset_ep.c  tusb_config.h  usb_descriptors.c
fw/test/: fwtest.py  smsceeprom.py  smscreset.py
(+305 files in other folders)
